--- a/style2.css
+++ b/style2.css
@@ -1,3 +1,122 @@
+/* background */
+
+body {
+    background-image: url(Images/Marble.jpg);
+    background-size: 100%;
+}
+
+/* search bar */
+.row{
+    justify-content: space-around;
+}
+
+.card {
+
+    border: none;
+    background: #eee;
+
+}
+
+.search {
+    width: 100%;
+    margin-bottom: auto;
+    margin-top: 20px;
+    height: 50px;
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.search-input {
+    color: white;
+    border: 0;
+    outline: 0;
+    background: none;
+    width: 0;
+    margin-top: 5px;
+    caret-color: transparent;
+    line-height: 20px;
+    transition: width 0.4s linear
+}
+
+.search .search-input {
+    padding: 0 10px;
+    width: 100%;
+    caret-color: #536bf6;
+    font-size: 19px;
+    font-weight: 300;
+    color: black;
+    transition: width 0.4s linear;
+}
+
+
+.search-icon {
+    height: 34px;
+    width: 34px;
+    float: right;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    background-color: #536bf6;
+    font-size: 10px;
+    bottom: 30px;
+    position: relative;
+    border-radius: 5px;
+}
+
+.search-icon:hover {
+
+    color: #fff !important;
+}
+
+a:link {
+    text-decoration: none
+}
+
+
+
+.card-inner {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid rgba(0, 0, 0, .125);
+    border-radius: .25rem;
+    border: none;
+    cursor: pointer;
+    transition: all 2s;
+}
+
+
+.card-inner:hover {
+
+    transform: scale(1.1);
+
+}
+
+.mg-text span {
+
+    font-size: 12px;
+
+}
+
+.mg-text {
+
+    line-height: 14px;
+}
+
+.diet{
+    display: flex;
+    flex-direction: row;
+    align-content: space-between;
+}
+
+/* data */
+
 #dataT{
     display: flex;
     flex-wrap: wrap;
@@ -8,6 +127,7 @@
 
 .card{
     border: 7px bold black;
+    background-color: rgba(0, 0, 0, 0);
 }
 
 h1{
@@ -20,4 +140,13 @@ h1{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size:larger;
     font-weight: bold;
+}
+
+.card:hover{
+    filter: brightness(110%)
+}
+
+div.card.p-4.mt-3{
+    background-color: lightgreen;
+
 }
