--- a/style.css
+++ b/style.css
@@ -39,3 +39,24 @@ body{
 }
 
 /* footer */
+
+h1 {
+    font-size: large;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bolder;
+}
+
+.card-title {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: larger;
+    font-weight: bold;
+}
+
+.card:hover {
+    filter: brightness(110%)
+}
+
+div.card.p-4.mt-3 {
+    background-color: lightgreen;
+
+}
