--- a/style.css
+++ b/style.css
@@ -29,6 +29,25 @@ body{
 }
 
 /* h1 */
+
+#welcome-on{
+    text-align: center;
+    font-size: 30px;
+    font-weight: bolder;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+#get-a-recipe{
+    text-align: center;
+    font-size: 50px;
+    font-weight: bolder;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+p{
+    font-weight: 500;
+}
+
 .flex-container{
     display: flex;
     justify-content: space-around;
@@ -37,6 +56,25 @@ body{
     flex-direction: column;
     align-items: center;
 }
+
+/* random recipe botton */
+
+div.card.p-4.mt-3 {
+    background-color: lightgreen;
+    display: grid;
+    grid-template-columns: 100px 30px auto 30px 100px;
+    align-items: center;
+}
+
+div.card.p-4.mt-3:hover {
+    filter: none;
+}
+
+button:hover{
+    filter: brightness(110%)
+
+}
+
 
 /* footer */
 
