--- a/style2.css
+++ b/style2.css
@@ -75,7 +75,6 @@ a:link {
 }
 
 
-
 .card-inner {
     position: relative;
     display: flex;
@@ -93,26 +92,21 @@ a:link {
 
 
 .card-inner:hover {
-
     transform: scale(1.1);
-
 }
 
+
 .mg-text span {
-
     font-size: 12px;
-
 }
 
 .mg-text {
-
     line-height: 14px;
 }
 
 .diet{
-    display: flex;
-    flex-direction: row;
-    align-content: space-between;
+    display: grid;
+    grid-template-columns: auto 10px auto;
 }
 
 /* data */
@@ -125,10 +119,12 @@ a:link {
     border-top: 30px;
 }
 
+
 .card{
     border: 7px bold black;
     background-color: rgba(0, 0, 0, 0);
 }
+
 
 h1{
     font-size: large;
@@ -136,22 +132,52 @@ h1{
     font-weight: bolder;
 }
 
+
 .card-title{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size:larger;
     font-weight: bold;
 }
 
+
 .card:hover{
     filter: brightness(110%)
 }
 
+
 div.card.p-4.mt-3{
     background-color: lightgreen;
-
 }
+
 
 div.card.p-4.mt-3:hover{
     filter: none;
+}
 
+/* tooltips */
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black;
+}
+
+
+.tooltip.tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+
+    /* Position the tooltip text - see examples below! */
+    position: absolute;
+    z-index: 1;
+}
+
+/* Show the tooltip text when you mouse over the tooltip container */
+.tooltip:hover .tooltiptext {
+    visibility: visible;
 }
