--- a/favourites/style-favourites.css
+++ b/favourites/style-favourites.css
@@ -1,7 +1,7 @@
 /* background */
 
 body {
-    background-image: url(Images/Marble.jpg);
+    background-image: url(../Images/Marble.jpg);
     background-size: 100%;
 }
 
