--- a/homepage/style.css
+++ b/homepage/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(Images/Marble.jpg);
+    background-image: url(../Images/Marble.jpg);
     background-size: 100%;
 }
 
