--- a/recipes/style-recipes.css
+++ b/recipes/style-recipes.css
@@ -1,7 +1,7 @@
 /* background */
 
 body {
-    background-image: url(Images/Marble.jpg);
+    background-image: url(../Images/Marble.jpg);
     background-size: 100%;
 }
 
